<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/travel_event"
            android:textAppearance="@style/RtlOverlay.Widget.AppCompat.PopupMenuItem"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"
            android:id="@+id/tvTravelEvent" />

        <EditText
            android:id="@+id/etEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination"
            android:layout_marginTop="15dp">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/etEstBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EstBudget"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/startDate"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endDate"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/btEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/event"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_cross" />


</LinearLayout>